samples/_failures_safe/1761526418_0602f5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_517fe0ef.c: In function ‘main’:
./samples/SAFE/__tmp_517fe0ef.c:164:5: error: expected expression at end of input
  164 |     int token_count = tokenize(input, tokens,
      |     ^~~
./samples/SAFE/__tmp_517fe0ef.c:164:5: error: expected declaration or statement at end of input
